* Remove variable `CSS_INDEX` because in IE the `sourceIndex` property can be 0 on disconnected nodes. [jddalton]

* Add cache back to getChildIndexesByTag(). [Diego Perini, jddalton]

* Rename private variable `SKIP_COMMENTS` to `SKIP_NON_ELEMENTS` and filer out comments, document, and invalid elements. [Diego Perini, jddalton, Thomas Aylott]

* Stop non-HTML documents throwing errors by changing checks like `if (from.getElementsByTagName)` to `if ('getElementsByTagName' in from)`. [jddalton]

* Rename private variable `NODE_NAME_TO_UPPER_CASE` to `TO_UPPER_CASE`. [jddalton]

* Ensure selectors like `* > :first-child` and `> :first-child` return the same results. [jddalton]

* Avoid extracting parenthesis around pseudos parameters and having to remove them later [Diego Perini]

* Ensure client_api() doesn't use an optimized selector for the compiled/dom cache. [jddalton]

* Ensure selectors like `.foo > *` and `.foo >` return the same results. [jddalton]

* Assume `context` on selectors like `> h3` which don't specify one. [jddalton]

* Avoid escaping characters that don't need it in regexps and simplify `reSplitGroup` and `reSplitToken`. [jddalton]

* Ensure the div test element is removed from the document. [jddalton]

* Make NWMatcher work when embedded in XHTML or XML documents. [jddalton]

* Ensure ancestor/descendant resolvers don't end on the document node. [Diego Perini]

* Removed the client_api() named expression for Safari 2 support. [Diego Perini]

* Refine the `reValidator` regexp. [jddalton, Diego Perini]

* Remove unused methods getChildren() and getNextSibling(). [Diego Perini]

* Rewrite client_api() to avoid extra optimizations that are handled better by the selector compiler. [Diego Perini, jddalton]

* Add wildcard `*` tagName processing to the `RE_SIMPLE_SELECTOR` regexp for non-IE browsers. [Diego Perini]

* Add `context` fallback to byClass(). [Diego Perini]
